--- a/styles/main.css
+++ b/styles/main.css
@@ -48,15 +48,6 @@ a {
     max-width: 1600px; }
 
 .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   background: #2c2c2c;
   border-radius: 0 0 30px 30px; }
   .header .block-container {
@@ -64,7 +55,12 @@ a {
     padding-left: 227px; }
     @media screen and (max-width: 1024px) {
       .header .block-container {
-        padding-left: 50px; } }
+        padding-left: 50px;
+        padding-right: 50px; } }
+    @media screen and (max-width: 400px) {
+      .header .block-container {
+        padding-left: 10px;
+        padding-right: 10px; } }
     .header .block-container .top-panel {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -97,6 +93,12 @@ a {
           position: absolute;
           top: 42px;
           right: 100px; }
+          @media screen and (max-width: 1024px) {
+            .header .block-container .top-panel .logo-nav .hamburger {
+              right: 50px; } }
+          @media screen and (max-width: 400px) {
+            .header .block-container .top-panel .logo-nav .hamburger {
+              right: 10px; } }
           .header .block-container .top-panel .logo-nav .hamburger__check {
             opacity: 0;
             position: absolute;
@@ -189,7 +191,11 @@ a {
             background: #2060f6;
             padding-top: 100px;
             padding-left: 40vw;
-            z-index: 2; }
+            z-index: 2; } }
+  @media screen and (max-width: 1024px) and (max-width: 400px) {
+    .header .block-container .top-panel .hamburger-checkbox:checked + .nav__list {
+      padding-left: 50px; } }
+        @media screen and (max-width: 1024px) {
             .header .block-container .top-panel .hamburger-checkbox:checked + .nav__list .nav__link {
               font-size: 22px;
               line-height: 60px; } }
@@ -200,11 +206,20 @@ a {
       -webkit-box-pack: justify;
           -ms-flex-pack: justify;
               justify-content: space-between; }
+      @media screen and (max-width: 1024px) {
+        .header .block-container .header-info {
+          -webkit-box-pack: center;
+              -ms-flex-pack: center;
+                  justify-content: center;
+          -webkit-box-align: center;
+              -ms-flex-align: center;
+                  align-items: center;
+          text-align: center; } }
       .header .block-container .header-info .text-side {
-        -webkit-box-flex: 1;
-            -ms-flex: 1 2 auto;
-                flex: 1 2 auto;
-        max-width: 490px;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 1 auto;
+                flex: 0 1 auto;
+        max-width: 437px;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -222,7 +237,8 @@ a {
                     justify-content: center;
             -webkit-box-align: center;
                 -ms-flex-align: center;
-                    align-items: center; } }
+                    align-items: center;
+            text-align: center; } }
         .header .block-container .header-info .text-side__heading {
           font-family: "Poppins", sans-serif;
           font-style: normal;
@@ -270,16 +286,15 @@ a {
           .header .block-container .header-info .text-side__link:hover {
             background: #144ed5; }
       .header .block-container .header-info__img-side {
-        -webkit-box-flex: 2;
-            -ms-flex: 2 1 600px;
-                flex: 2 1 600px;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 1 600px;
+                flex: 0 1 600px;
         background-image: url(../images/upd/header-img.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
         position: relative;
-        border-radius: 30px 0;
-        overflow: hidden; }
+        border-radius: 30px 0; }
         @media screen and (max-width: 400px) {
           .header .block-container .header-info__img-side {
             display: none; } }
@@ -366,7 +381,7 @@ a {
   .main-container .main-inner {
     max-width: 1600px; }
   .main-container .about-info {
-    margin: 148px 14%; }
+    margin: 14%; }
     @media screen and (max-width: 1024px) {
       .main-container .about-info {
         margin: 50px; } }
@@ -400,7 +415,7 @@ a {
         padding: 50px; } }
     @media screen and (max-width: 400px) {
       .main-container .expertise {
-        padding: 5px;
+        padding: 10px;
         width: 300px;
         -webkit-box-sizing: border-box;
                 box-sizing: border-box; } }
@@ -417,6 +432,9 @@ a {
         .main-container .expertise__heading {
           font-size: 32px;
           margin-bottom: 20px; } }
+      @media screen and (max-width: 400px) {
+        .main-container .expertise__heading {
+          margin-bottom: 5px; } }
     .main-container .expertise__services {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -451,6 +469,9 @@ a {
           text-align: center;
           overflow: hidden;
           margin-bottom: 40px; }
+          @media screen and (max-width: 400px) {
+            .main-container .expertise__services .service__pict {
+              margin-bottom: 10px; } }
           .main-container .expertise__services .service__pict .try {
             display: inline-block;
             overflow: hidden;
@@ -502,7 +523,7 @@ a {
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
                 flex-direction: column;
-        padding: 10px;
+        padding: 50px;
         -webkit-box-sizing: border-box;
                 box-sizing: border-box;
         max-width: 320px; } }
@@ -526,6 +547,9 @@ a {
         @media screen and (max-width: 1024px) {
           .main-container .process .info__subheader {
             margin-top: 100px; } }
+        @media screen and (max-width: 400px) {
+          .main-container .process .info__subheader {
+            margin-top: 10px; } }
       .main-container .process .info__main-header {
         font-family: "Poppins", sans-serif;
         font-style: normal;
@@ -552,6 +576,9 @@ a {
           @media screen and (max-width: 1024px) {
             .main-container .process .info__text:last-child {
               margin-bottom: 100px; } }
+          @media screen and (max-width: 400px) {
+            .main-container .process .info__text:last-child {
+              margin-bottom: 10px; } }
     .main-container .process__blocks {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -669,7 +696,7 @@ a {
     .main-container .approach-outter .approach-inner {
       background: #2c2c2c;
       border-radius: 30px 0 0 30px;
-      padding: 204px 0 0 204px;
+      padding: 14% 0 0 14%;
       position: relative;
       display: -webkit-box;
       display: -ms-flexbox;
@@ -689,7 +716,8 @@ a {
           padding-top: 100px; } }
       @media screen and (max-width: 400px) {
         .main-container .approach-outter .approach-inner {
-          padding: 10px; } }
+          padding: 10px;
+          padding-top: 30px; } }
       @media screen and (min-width: 1600px) {
         .main-container .approach-outter .approach-inner {
           border-radius: 30px; } }
@@ -721,6 +749,9 @@ a {
           color: #fff;
           margin-bottom: 32px; }
           @media screen and (max-width: 1024px) {
+            .main-container .approach-outter .approach-inner .approach-info__header {
+              font-size: 26px; } }
+          @media screen and (max-width: 400px) {
             .main-container .approach-outter .approach-inner .approach-info__header {
               font-size: 20px; } }
         .main-container .approach-outter .approach-inner .approach-info .block-line {
@@ -762,7 +793,7 @@ a {
             font-size: 15px;
             color: #fff;
             font-weight: normal; }
-            @media screen and (max-width: 1024px) {
+            @media screen and (max-width: 400px) {
               .main-container .approach-outter .approach-inner .approach-info .block-line__text {
                 font-size: 11px; } }
           .main-container .approach-outter .approach-inner .approach-info .block-line:hover img {
@@ -784,7 +815,8 @@ a {
         padding: 50px; } }
     @media screen and (max-width: 400px) {
       .main-container .testimonials {
-        padding: 20px; } }
+        padding: 20px;
+        padding-top: 50px; } }
     .main-container .testimonials__subheader {
       font-family: "Poppins", sans-serif;
       font-style: normal;
@@ -804,6 +836,9 @@ a {
       font-size: 32px;
       color: #253757;
       margin-bottom: 85px; }
+      @media screen and (max-width: 400px) {
+        .main-container .testimonials__header {
+          margin-bottom: 20px; } }
     .main-container .testimonials__feedbacks {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -826,10 +861,22 @@ a {
         position: relative;
         text-align: center;
         width: 314px;
-        margin-bottom: 50px; }
+        margin-bottom: 50px;
+        padding: 0 32px 32px;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box; }
         @media screen and (max-width: 400px) {
           .main-container .testimonials__feedbacks .feedback {
-            max-width: 300px; } }
+            max-width: 280px;
+            padding: 0 10px;
+            margin-bottom: 20px; } }
+        .main-container .testimonials__feedbacks .feedback:hover .rect-bot,
+        .main-container .testimonials__feedbacks .feedback:hover .rect-top {
+          -webkit-transform: rotate(-30deg);
+                  transform: rotate(-30deg); }
+        .main-container .testimonials__feedbacks .feedback:hover .scale-photo {
+          -webkit-transform: scale(1.3);
+                  transform: scale(1.3); }
         .main-container .testimonials__feedbacks .feedback .rect {
           position: absolute; }
         .main-container .testimonials__feedbacks .feedback__photo {
@@ -841,13 +888,29 @@ a {
           -o-object-fit: cover;
              object-fit: cover;
           position: relative;
-          z-index: 2; }
+          z-index: 2;
+          -webkit-transition: -webkit-transform 300ms;
+          transition: -webkit-transform 300ms;
+          transition: transform 300ms;
+          transition: transform 300ms, -webkit-transform 300ms; }
         .main-container .testimonials__feedbacks .feedback__rectangle-upper {
           top: 36px;
-          left: 50px; }
+          left: 50px;
+          -webkit-transform-origin: bottom;
+                  transform-origin: bottom;
+          -webkit-transition: -webkit-transform 300ms;
+          transition: -webkit-transform 300ms;
+          transition: transform 300ms;
+          transition: transform 300ms, -webkit-transform 300ms; }
         .main-container .testimonials__feedbacks .feedback__rectangle-lower {
           top: 129px;
-          right: 49px; }
+          right: 49px;
+          -webkit-transform-origin: top;
+                  transform-origin: top;
+          -webkit-transition: -webkit-transform 300ms;
+          transition: -webkit-transform 300ms;
+          transition: transform 300ms;
+          transition: transform 300ms, -webkit-transform 300ms; }
         .main-container .testimonials__feedbacks .feedback__quote, .main-container .testimonials__feedbacks .feedback__name {
           font-family: "Open Sans", sans-serif;
           font-style: normal;
@@ -899,7 +962,8 @@ a {
         width: 300px;
         margin: 0 auto;
         -webkit-box-sizing: border-box;
-                box-sizing: border-box; } }
+                box-sizing: border-box;
+        margin-bottom: 50px; } }
     @media screen and (min-width: 1600px) {
       .main-container .components {
         border-radius: 30px; } }
@@ -1271,18 +1335,25 @@ a {
         color: #fff; }
     .footer .forms .contact__socials-icons {
       margin-top: 16px; }
+      .footer .forms .contact__socials-icons #tw,
+      .footer .forms .contact__socials-icons #ig {
+        stroke-width: 5px; }
       .footer .forms .contact__socials-icons .socials-icon {
         display: inline-block;
         width: 24px;
         height: 24px;
-        -webkit-transition: -webkit-transform 300ms;
-        transition: -webkit-transform 300ms;
-        transition: transform 300ms;
-        transition: transform 300ms, -webkit-transform 300ms;
-        margin: 10px; }
+        -webkit-transition: fill 300ms, -webkit-transform 300ms;
+        transition: fill 300ms, -webkit-transform 300ms;
+        transition: transform 300ms, fill 300ms;
+        transition: transform 300ms, fill 300ms, -webkit-transform 300ms;
+        margin: 10px;
+        fill: none;
+        stroke: #fff;
+        stroke-width: 1px; }
         .footer .forms .contact__socials-icons .socials-icon:hover {
           -webkit-transform: scale(1.2);
-                  transform: scale(1.2); }
+                  transform: scale(1.2);
+          fill: #fff; }
   .footer .logo-nav {
     display: -webkit-box;
     display: -ms-flexbox;
