--- a/styles/main.css
+++ b/styles/main.css
@@ -92,7 +92,6 @@ a {
         .header .block-container .top-panel .logo-nav .hamburger {
           position: absolute;
           top: 2px;
-          margin-right: -30px;
           padding: 20px;
           display: inline-block;
           z-index: 99; }
@@ -104,7 +103,7 @@ a {
               right: 10px; } }
           .header .block-container .top-panel .logo-nav .hamburger-logo {
             cursor: pointer;
-            display: inline-block;
+            display: block;
             padding: 20px;
             z-index: 99; }
             .header .block-container .top-panel .logo-nav .hamburger-logo span {
@@ -118,15 +117,7 @@ a {
                   position: relative;
                   background: #cdcdcd;
                   border-radius: 3px;
-                  z-index: 3;
-                  -webkit-transform-origin: 4px 0;
-                          transform-origin: 4px 0; }
-                  .header .block-container .top-panel .logo-nav .hamburger-logo span:first-child {
-                    -webkit-transform-origin: 0% 0%;
-                            transform-origin: 0% 0%; }
-                  .header .block-container .top-panel .logo-nav .hamburger-logo span:nth-last-child(2) {
-                    -webkit-transform-origin: 0% 100%;
-                            transform-origin: 0% 100%; } }
+                  z-index: 99; } }
         .header .block-container .top-panel .logo-nav .nav__list {
           display: -webkit-box;
           display: -ms-flexbox;
@@ -140,7 +131,16 @@ a {
           line-height: 30px; }
           @media screen and (max-width: 1024px) {
             .header .block-container .top-panel .logo-nav .nav__list {
-              display: none; } }
+              opacity: 0;
+              -webkit-transform-origin: 0% 0%;
+                      transform-origin: 0% 0%;
+              -webkit-transform: translate(0, -1000%);
+                      transform: translate(0, -1000%);
+              -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+              transition: -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+              transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+              transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+              position: absolute; } }
         .header .block-container .top-panel .logo-nav .nav__item {
           margin-right: 4vw; }
         .header .block-container .top-panel .logo-nav .nav__link {
@@ -181,12 +181,13 @@ a {
             .header .block-container .top-panel .logo-nav .nav .hire {
               margin-left: 158px; } }
       .header .block-container .top-panel .hamburger-checkbox {
-        opacity: 0;
-        position: absolute;
-        top: -100%; }
+        display: none; }
         @media screen and (max-width: 1024px) {
           .header .block-container .top-panel .hamburger-checkbox:checked + .nav__list {
             display: block;
+            -webkit-transform: none;
+                    transform: none;
+            opacity: 1;
             position: absolute;
             top: 0;
             bottom: 0;
@@ -194,12 +195,8 @@ a {
             right: 0;
             background: #2060f6;
             padding-top: 100px;
-            padding-left: 40vw;
-            z-index: 2; } }
-  @media screen and (max-width: 1024px) and (max-width: 400px) {
-    .header .block-container .top-panel .hamburger-checkbox:checked + .nav__list {
-      padding-left: 50px; } }
-        @media screen and (max-width: 1024px) {
+            padding-left: 5vw;
+            z-index: 2; }
             .header .block-container .top-panel .hamburger-checkbox:checked + .nav__list .nav__link {
               font-size: 22px;
               line-height: 60px; } }
